<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="14dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/TVVC_CenterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/bold"
            android:text="@string/center_name"
            android:padding="1dp"
            android:textColor="@color/black"
            android:layout_margin="3dp"
          />
        <TextView
            android:id="@+id/TvVC_Centerid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:textSize="15sp"
            android:layout_below="@id/TVVC_CenterName"
            android:text="@string/centerid"
            android:padding="1dp"
            android:textColor="@color/black"
            android:layout_margin="3dp"
            />
        <TextView
            android:id="@+id/idTVVC_CenterLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:fontFamily="@font/medium"
            android:layout_below="@id/TvVC_Centerid"
            android:text="@string/center_location"
            android:padding="1dp"
            android:textColor="@color/black"
            android:layout_margin="3dp"
            />




        <LinearLayout
            android:id="@+id/LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_below="@id/idTVVC_CenterLocation"
            >

            <TextView
                android:id="@+id/TVVC_centerstate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="1dp"
                android:layout_weight="1"
                android:text="@string/state"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textColor="@color/bottom_nav_icons"/>

            <TextView
                android:id="@+id/TvVC_centerdistrict"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="1dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/district"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textColor="@color/bottom_nav_icons"/>







        </LinearLayout>






    </RelativeLayout>



    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="100dp"
        android:layout_marginStart="0dp"
        android:background="@drawable/button_background"
        android:visibility="visible"
        android:layout_gravity="center_vertical"
        />

</androidx.cardview.widget.CardView>